# cascade

./: .clang-format  .gitignore  Makefile  README.md  compile_flags.txt  meson.build
example_app/: meson.build
example_app/src/: main.c
include/cascade/platform/: init.h  window.h
include/platform/: window.h
src/: log.c  log.h  main.c  window.c  window.h
src/platform/: init.c  window.c
src/vulkan/: debug.c  debug.h  extensions.c  extensions.h  instance.c  instance.h  layer.c  layer.h  logical_device.c  logical_device.h  phys_device.c  phys_device.h
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
